--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ejson": "^2.1.2",
     "minimongo-cache": "0.0.48",
     "prop-types": "^15.5.10",
-    "react-komposer": "^1.8.0",
+    "react-komposer": "git+https://github.com/fermuch/react-komposer.git",
     "react-mixin": "^3.0.3",
     "trackr": "^2.0.2",
     "underscore": "^1.8.3",
@@ -49,6 +49,6 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "^0.47.0"
+    "react-native": "^0.46.0 || ^0.47.0"
   }
 }
